Creazione della pagina home (ancora da spostare il logo in un altro punto della pagina + aggiustare l'hoover del dropdown) Inserimento di una pagina attività estive dove si aggiungono i diversi eventi che potrebbero essere disponibili nel periodo estivo e quello invernale, NON per forza vuol dire che questi sia disponibili (le attività disponibili saranno caricate sulla pagina registra e potranno essere prenotate dall'utente)

--- a/attivita_estive.css
+++ b/attivita_estive.css
@@ -107,7 +107,7 @@ a {
   font-style: italic;
 }
 
-#logo {
+ img {
   display: block;
   margin: 1rem auto;
   max-width: 80%;
@@ -117,14 +117,6 @@ a {
   align-items: center;
 }
 
-#forest_home {
-  display: block;
-  margin: 1rem auto;
-  max-width: 80%;
-  height: 40rem;
-  width: 30rem;
-  border-radius: 0.3rem;
-}
 
 footer {
   /*inserisco un opacity per non trascurare troppo il testo dietro e per lasciare la mail e il numero di cellulare divisi */
@@ -148,3 +140,10 @@ footer a:hover {
   color: #ddd;
 }
 
+
+.attiva{
+  background-color: #2b4349;
+}
+#attiva_dropdown{
+  background-color: #2b4349;
+}
