Aggiunta dei pulsanti EN e IT per tradurre in italiano o in inglese la pagina HOME del sito web. Chiedere al docente come mai, quando inserisco lang="<?php echo $lang?>" nell'intestazione mi viene sempre preso it.

--- a/attivita_estive.css
+++ b/attivita_estive.css
@@ -34,6 +34,8 @@
 
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: rgb(16, 51, 4);
+  /*aggiungo anche in questo caso border color in modo da far colorare anche il bordo quando viene selezionato*/
+  border-color: rgb(16, 51, 4);
 }
 
 .dropdown-content {
