--- a/home_ESP2.css
+++ b/home_ESP2.css
@@ -30,7 +30,7 @@
   /*devo modificare qui i margini altrimenti la scritta non viene centrata rispetto alle altre (modificata guardando da ispeziona ed 
   inserendo il valore che andava ad allineare alle altre parole la scritta
   margin-top: 0.3rem*/
-  margin-top: 0.6rem;
+  margin-top: 0.4rem;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
@@ -40,14 +40,14 @@
 }
 
 .dropdown-content {
+  /*in questo caso inserisco display none in modo tale da non mostrare il menù a tendina a meno che non ci passi sopra con il mouse*/
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 10rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-  z-index: 1;
-
 }
+
 .dropdown-content a {
   float: none;
   color: black;
@@ -55,12 +55,10 @@
   text-decoration: none;
   display: block;
   text-align: left;
-
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
-
 }
 
 .dropdown:hover .dropdown-content {
@@ -104,16 +102,18 @@ a {
   text-decoration: none;
   font-size: 1rem;
 }
-.link{
+
+.link {
   /*cambio le caratteristiche dei link in modo che l'utente riesca a capire che sia possibile utilizzarli per collegarsi ad altre pagine*/
   color: #487f2c;
   font-style: italic;
 }
-#introduzione{
-  float:right;
+
+#introduzione {
+  float: right;
 }
+
 #logo {
-  align-content: center;
   display: block;
   margin: 1rem auto;
   max-width: 80%;
@@ -126,13 +126,15 @@ a {
   box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.1); */
   align-items: center;
 }
-.immagine{
-  clear:right;
-  float:left;
+
+.immagine {
+  clear: right;
+  float: left;
 }
+
 #forest_home {
-  float:left;
-  clear:right;
+  float: left;
+  clear: right;
   margin: 1rem auto;
   max-width: 80%;
   height: 20rem;
@@ -161,6 +163,7 @@ footer a {
 footer a:hover {
   color: #ddd;
 }
+
 form {
   margin-top: 1.25rem;
   text-align: center;
@@ -173,6 +176,9 @@ form input[type="submit"] {
   border: none;
   border-radius: 0.3125rem;
   cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 form input[type="submit"][value="it"] {
@@ -182,10 +188,3 @@ form input[type="submit"][value="it"] {
 form input[type="submit"][value="en"] {
   background-color: #09392d;
 }
-
-form input[type="submit"] {
-  font-size: 1rem;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
