--- a/css/skipass.css
+++ b/css/skipass.css
@@ -197,3 +197,33 @@ footer a:hover {
 a {
   align-items: center;
 }
+.skipp{
+  margin:auto;
+  text-align: center;
+}
+
+#bold{
+  font-weight: bold;
+  font-style: italic;
+}
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
