progetto 2 struttura terminata, necessario ancora sistemare graficamente il carrello ma da fare dopo aver osservato le libreririe react se necessario (superfluo). Per il resto è stato aggiunto il carrello per gli acquisti e una parte relativa alle news che mostra un pop up di avvertimento (alert) più una progress bar.

--- a/css/skipass.css
+++ b/css/skipass.css
@@ -227,3 +227,43 @@ a {
 .closebtn:hover {
   color: black;
 }
+.header {
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+.header h2 {
+  text-align: center;
+  color: #366120;
+}
+
+h3{
+  color:#366120;
+  font-weight: bold;
+}
+.progress-container {
+  position: fixed;
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+  /*faccio la sbarra opaca per evitare che si sovrapponga con il resto del testo*/
+  opacity: 0.3;
+}
+
+.progress-bar {
+  height: 8px;
+  background: #04AA6D;
+  width: 0%;
+}
+
+.content {
+  padding: 2rem;
+  margin-left: 3rem;
+  width: 80%;
+}
+.successo{
+  color:green;
+  margin-left: 2rem;
+}
